# django-chat_app

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  README.rst  pyproject.toml
core/core/utils/: collections.py  misc.py  settings.py
core/project/: apps.py  models.py  urls.py  views.py
core/project/migrations/: 0001_initial.py  0002_alter_message_message_text_response.py  0003_response_pub_date.py  0004_response_attached_file.py
core/project/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py  logging.py
core/project/settings/templates/: settings.dev.py
core/project/static/: ajax.js  style.css
core/project/templates/: index.html
core/project/templates/includes/: base.html  nav.html
core/project/utils/: gptApi.py  langchainGptApi.py
