[tool.poetry]
name = "chat-app"
version = "0.1.0"
description = ""
authors = ["rodri <25470856+drigohhh@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"
djangorestframework = "^3.15.2"
mysql-connector-python = "^9.0.0"
django-filter = "^24.3"
django-split-settings = "^1.3.2"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
