[tool.poetry]
name = "chat-app"
version = "0.1.0"
description = ""
authors = ["rodri <25470856+drigohhh@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
django-split-settings = "^1.3.2"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
colorlog = "^6.8.2"
ruff = "^0.6.7"

[tool.ruff]
ignore = ["W293"]
exclude = [
    ".git",
    "__pycache__",
    "venv"
]
line-length = 119

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.extend-per-file-ignores]
"core/project/settings/templates/settings.dev.py" = ["F821"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
